output/Navy Design System/_internal/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> effect_file
Rule 1     effect_file -> ID EQUALS LBRACE effect_content RBRACE
Rule 2     effect_file -> ID EQUALS LBRACE country_tag effect_content RBRACE
Rule 3     effect_file -> ID EQUALS LBRACE countries_tag effect_content RBRACE
Rule 4     effect_file -> effect_file ID EQUALS LBRACE country_tag effect_content RBRACE
Rule 5     effect_file -> effect_file ID EQUALS LBRACE countries_tag effect_content RBRACE
Rule 6     country_tag -> COUNTRY EQUALS STRING
Rule 7     countries_tag -> COUNTRIES EQUALS LBRACKET country_list RBRACKET
Rule 8     country_list -> ID
Rule 9     country_list -> country_list COMMA ID
Rule 10    effect_content -> effect_statement
Rule 11    effect_content -> effect_content effect_statement
Rule 12    effect_statement -> ID EQUALS LBRACE variant_content RBRACE
Rule 13    effect_statement -> OVERRIDE DOT ID LPAREN STRING RPAREN EQUALS LBRACE variant_content RBRACE
Rule 14    effect_statement -> ID EQUALS value
Rule 15    effect_statement -> OVERRIDE DOT ID LPAREN STRING RPAREN
Rule 16    variant_content -> variant_item
Rule 17    variant_content -> variant_content variant_item
Rule 18    variant_content -> OVERRIDE DOT ID LPAREN STRING RPAREN
Rule 19    variant_content -> variant_content OVERRIDE DOT ID LPAREN STRING RPAREN
Rule 20    variant_item -> ID EQUALS value
Rule 21    variant_item -> ID EQUALS LBRACE block_content RBRACE
Rule 22    variant_item -> ID EQUALS yes_no
Rule 23    value -> ID
Rule 24    value -> NUMBER
Rule 25    value -> STRING
Rule 26    value -> ID COLON ID
Rule 27    block_content -> block_item
Rule 28    block_content -> block_content block_item
Rule 29    block_item -> ID EQUALS value
Rule 30    block_item -> ID EQUALS LBRACE block_content RBRACE
Rule 31    yes_no -> YES
Rule 32    yes_no -> NO

Terminals, with rules where they appear

COLON                : 26
COMMA                : 9
COUNTRIES            : 7
COUNTRY              : 6
DOT                  : 13 15 18 19
EQUALS               : 1 2 3 4 5 6 7 12 13 14 20 21 22 29 30
ID                   : 1 2 3 4 5 8 9 12 13 14 15 18 19 20 21 22 23 26 26 29 30
LBRACE               : 1 2 3 4 5 12 13 21 30
LBRACKET             : 7
LPAREN               : 13 15 18 19
NO                   : 32
NUMBER               : 24
OVERRIDE             : 13 15 18 19
RBRACE               : 1 2 3 4 5 12 13 21 30
RBRACKET             : 7
RPAREN               : 13 15 18 19
STRING               : 6 13 15 18 19 25
YES                  : 31
error                : 

Nonterminals, with rules where they appear

block_content        : 21 28 30
block_item           : 27 28
countries_tag        : 3 5
country_list         : 7 9
country_tag          : 2 4
effect_content       : 1 2 3 4 5 11
effect_file          : 4 5 0
effect_statement     : 10 11
value                : 14 20 29
variant_content      : 12 13 17 19
variant_item         : 16 17
yes_no               : 22

Parsing method: LALR

state 0

    (0) S' -> . effect_file
    (1) effect_file -> . ID EQUALS LBRACE effect_content RBRACE
    (2) effect_file -> . ID EQUALS LBRACE country_tag effect_content RBRACE
    (3) effect_file -> . ID EQUALS LBRACE countries_tag effect_content RBRACE
    (4) effect_file -> . effect_file ID EQUALS LBRACE country_tag effect_content RBRACE
    (5) effect_file -> . effect_file ID EQUALS LBRACE countries_tag effect_content RBRACE

    ID              shift and go to state 2

    effect_file                    shift and go to state 1

state 1

    (0) S' -> effect_file .
    (4) effect_file -> effect_file . ID EQUALS LBRACE country_tag effect_content RBRACE
    (5) effect_file -> effect_file . ID EQUALS LBRACE countries_tag effect_content RBRACE

    ID              shift and go to state 3


state 2

    (1) effect_file -> ID . EQUALS LBRACE effect_content RBRACE
    (2) effect_file -> ID . EQUALS LBRACE country_tag effect_content RBRACE
    (3) effect_file -> ID . EQUALS LBRACE countries_tag effect_content RBRACE

    EQUALS          shift and go to state 4


state 3

    (4) effect_file -> effect_file ID . EQUALS LBRACE country_tag effect_content RBRACE
    (5) effect_file -> effect_file ID . EQUALS LBRACE countries_tag effect_content RBRACE

    EQUALS          shift and go to state 5


state 4

    (1) effect_file -> ID EQUALS . LBRACE effect_content RBRACE
    (2) effect_file -> ID EQUALS . LBRACE country_tag effect_content RBRACE
    (3) effect_file -> ID EQUALS . LBRACE countries_tag effect_content RBRACE

    LBRACE          shift and go to state 6


state 5

    (4) effect_file -> effect_file ID EQUALS . LBRACE country_tag effect_content RBRACE
    (5) effect_file -> effect_file ID EQUALS . LBRACE countries_tag effect_content RBRACE

    LBRACE          shift and go to state 7


state 6

    (1) effect_file -> ID EQUALS LBRACE . effect_content RBRACE
    (2) effect_file -> ID EQUALS LBRACE . country_tag effect_content RBRACE
    (3) effect_file -> ID EQUALS LBRACE . countries_tag effect_content RBRACE
    (10) effect_content -> . effect_statement
    (11) effect_content -> . effect_content effect_statement
    (6) country_tag -> . COUNTRY EQUALS STRING
    (7) countries_tag -> . COUNTRIES EQUALS LBRACKET country_list RBRACKET
    (12) effect_statement -> . ID EQUALS LBRACE variant_content RBRACE
    (13) effect_statement -> . OVERRIDE DOT ID LPAREN STRING RPAREN EQUALS LBRACE variant_content RBRACE
    (14) effect_statement -> . ID EQUALS value
    (15) effect_statement -> . OVERRIDE DOT ID LPAREN STRING RPAREN

    COUNTRY         shift and go to state 13
    COUNTRIES       shift and go to state 14
    ID              shift and go to state 8
    OVERRIDE        shift and go to state 15

    effect_content                 shift and go to state 9
    country_tag                    shift and go to state 10
    countries_tag                  shift and go to state 11
    effect_statement               shift and go to state 12

state 7

    (4) effect_file -> effect_file ID EQUALS LBRACE . country_tag effect_content RBRACE
    (5) effect_file -> effect_file ID EQUALS LBRACE . countries_tag effect_content RBRACE
    (6) country_tag -> . COUNTRY EQUALS STRING
    (7) countries_tag -> . COUNTRIES EQUALS LBRACKET country_list RBRACKET

    COUNTRY         shift and go to state 13
    COUNTRIES       shift and go to state 14

    country_tag                    shift and go to state 16
    countries_tag                  shift and go to state 17

state 8

    (12) effect_statement -> ID . EQUALS LBRACE variant_content RBRACE
    (14) effect_statement -> ID . EQUALS value

    EQUALS          shift and go to state 18


state 9

    (1) effect_file -> ID EQUALS LBRACE effect_content . RBRACE
    (11) effect_content -> effect_content . effect_statement
    (12) effect_statement -> . ID EQUALS LBRACE variant_content RBRACE
    (13) effect_statement -> . OVERRIDE DOT ID LPAREN STRING RPAREN EQUALS LBRACE variant_content RBRACE
    (14) effect_statement -> . ID EQUALS value
    (15) effect_statement -> . OVERRIDE DOT ID LPAREN STRING RPAREN

    RBRACE          shift and go to state 19
    ID              shift and go to state 8
    OVERRIDE        shift and go to state 15

    effect_statement               shift and go to state 20

state 10

    (2) effect_file -> ID EQUALS LBRACE country_tag . effect_content RBRACE
    (10) effect_content -> . effect_statement
    (11) effect_content -> . effect_content effect_statement
    (12) effect_statement -> . ID EQUALS LBRACE variant_content RBRACE
    (13) effect_statement -> . OVERRIDE DOT ID LPAREN STRING RPAREN EQUALS LBRACE variant_content RBRACE
    (14) effect_statement -> . ID EQUALS value
    (15) effect_statement -> . OVERRIDE DOT ID LPAREN STRING RPAREN

    ID              shift and go to state 8
    OVERRIDE        shift and go to state 15

    effect_content                 shift and go to state 21
    effect_statement               shift and go to state 12

state 11

    (3) effect_file -> ID EQUALS LBRACE countries_tag . effect_content RBRACE
    (10) effect_content -> . effect_statement
    (11) effect_content -> . effect_content effect_statement
    (12) effect_statement -> . ID EQUALS LBRACE variant_content RBRACE
    (13) effect_statement -> . OVERRIDE DOT ID LPAREN STRING RPAREN EQUALS LBRACE variant_content RBRACE
    (14) effect_statement -> . ID EQUALS value
    (15) effect_statement -> . OVERRIDE DOT ID LPAREN STRING RPAREN

    ID              shift and go to state 8
    OVERRIDE        shift and go to state 15

    effect_content                 shift and go to state 22
    effect_statement               shift and go to state 12

state 12

    (10) effect_content -> effect_statement .

    RBRACE          reduce using rule 10 (effect_content -> effect_statement .)
    ID              reduce using rule 10 (effect_content -> effect_statement .)
    OVERRIDE        reduce using rule 10 (effect_content -> effect_statement .)


state 13

    (6) country_tag -> COUNTRY . EQUALS STRING

    EQUALS          shift and go to state 23


state 14

    (7) countries_tag -> COUNTRIES . EQUALS LBRACKET country_list RBRACKET

    EQUALS          shift and go to state 24


state 15

    (13) effect_statement -> OVERRIDE . DOT ID LPAREN STRING RPAREN EQUALS LBRACE variant_content RBRACE
    (15) effect_statement -> OVERRIDE . DOT ID LPAREN STRING RPAREN

    DOT             shift and go to state 25


state 16

    (4) effect_file -> effect_file ID EQUALS LBRACE country_tag . effect_content RBRACE
    (10) effect_content -> . effect_statement
    (11) effect_content -> . effect_content effect_statement
    (12) effect_statement -> . ID EQUALS LBRACE variant_content RBRACE
    (13) effect_statement -> . OVERRIDE DOT ID LPAREN STRING RPAREN EQUALS LBRACE variant_content RBRACE
    (14) effect_statement -> . ID EQUALS value
    (15) effect_statement -> . OVERRIDE DOT ID LPAREN STRING RPAREN

    ID              shift and go to state 8
    OVERRIDE        shift and go to state 15

    effect_content                 shift and go to state 26
    effect_statement               shift and go to state 12

state 17

    (5) effect_file -> effect_file ID EQUALS LBRACE countries_tag . effect_content RBRACE
    (10) effect_content -> . effect_statement
    (11) effect_content -> . effect_content effect_statement
    (12) effect_statement -> . ID EQUALS LBRACE variant_content RBRACE
    (13) effect_statement -> . OVERRIDE DOT ID LPAREN STRING RPAREN EQUALS LBRACE variant_content RBRACE
    (14) effect_statement -> . ID EQUALS value
    (15) effect_statement -> . OVERRIDE DOT ID LPAREN STRING RPAREN

    ID              shift and go to state 8
    OVERRIDE        shift and go to state 15

    effect_content                 shift and go to state 27
    effect_statement               shift and go to state 12

state 18

    (12) effect_statement -> ID EQUALS . LBRACE variant_content RBRACE
    (14) effect_statement -> ID EQUALS . value
    (23) value -> . ID
    (24) value -> . NUMBER
    (25) value -> . STRING
    (26) value -> . ID COLON ID

    LBRACE          shift and go to state 29
    ID              shift and go to state 28
    NUMBER          shift and go to state 31
    STRING          shift and go to state 32

    value                          shift and go to state 30

state 19

    (1) effect_file -> ID EQUALS LBRACE effect_content RBRACE .

    ID              reduce using rule 1 (effect_file -> ID EQUALS LBRACE effect_content RBRACE .)
    $end            reduce using rule 1 (effect_file -> ID EQUALS LBRACE effect_content RBRACE .)


state 20

    (11) effect_content -> effect_content effect_statement .

    RBRACE          reduce using rule 11 (effect_content -> effect_content effect_statement .)
    ID              reduce using rule 11 (effect_content -> effect_content effect_statement .)
    OVERRIDE        reduce using rule 11 (effect_content -> effect_content effect_statement .)


state 21

    (2) effect_file -> ID EQUALS LBRACE country_tag effect_content . RBRACE
    (11) effect_content -> effect_content . effect_statement
    (12) effect_statement -> . ID EQUALS LBRACE variant_content RBRACE
    (13) effect_statement -> . OVERRIDE DOT ID LPAREN STRING RPAREN EQUALS LBRACE variant_content RBRACE
    (14) effect_statement -> . ID EQUALS value
    (15) effect_statement -> . OVERRIDE DOT ID LPAREN STRING RPAREN

    RBRACE          shift and go to state 33
    ID              shift and go to state 8
    OVERRIDE        shift and go to state 15

    effect_statement               shift and go to state 20

state 22

    (3) effect_file -> ID EQUALS LBRACE countries_tag effect_content . RBRACE
    (11) effect_content -> effect_content . effect_statement
    (12) effect_statement -> . ID EQUALS LBRACE variant_content RBRACE
    (13) effect_statement -> . OVERRIDE DOT ID LPAREN STRING RPAREN EQUALS LBRACE variant_content RBRACE
    (14) effect_statement -> . ID EQUALS value
    (15) effect_statement -> . OVERRIDE DOT ID LPAREN STRING RPAREN

    RBRACE          shift and go to state 34
    ID              shift and go to state 8
    OVERRIDE        shift and go to state 15

    effect_statement               shift and go to state 20

state 23

    (6) country_tag -> COUNTRY EQUALS . STRING

    STRING          shift and go to state 35


state 24

    (7) countries_tag -> COUNTRIES EQUALS . LBRACKET country_list RBRACKET

    LBRACKET        shift and go to state 36


state 25

    (13) effect_statement -> OVERRIDE DOT . ID LPAREN STRING RPAREN EQUALS LBRACE variant_content RBRACE
    (15) effect_statement -> OVERRIDE DOT . ID LPAREN STRING RPAREN

    ID              shift and go to state 37


state 26

    (4) effect_file -> effect_file ID EQUALS LBRACE country_tag effect_content . RBRACE
    (11) effect_content -> effect_content . effect_statement
    (12) effect_statement -> . ID EQUALS LBRACE variant_content RBRACE
    (13) effect_statement -> . OVERRIDE DOT ID LPAREN STRING RPAREN EQUALS LBRACE variant_content RBRACE
    (14) effect_statement -> . ID EQUALS value
    (15) effect_statement -> . OVERRIDE DOT ID LPAREN STRING RPAREN

    RBRACE          shift and go to state 38
    ID              shift and go to state 8
    OVERRIDE        shift and go to state 15

    effect_statement               shift and go to state 20

state 27

    (5) effect_file -> effect_file ID EQUALS LBRACE countries_tag effect_content . RBRACE
    (11) effect_content -> effect_content . effect_statement
    (12) effect_statement -> . ID EQUALS LBRACE variant_content RBRACE
    (13) effect_statement -> . OVERRIDE DOT ID LPAREN STRING RPAREN EQUALS LBRACE variant_content RBRACE
    (14) effect_statement -> . ID EQUALS value
    (15) effect_statement -> . OVERRIDE DOT ID LPAREN STRING RPAREN

    RBRACE          shift and go to state 39
    ID              shift and go to state 8
    OVERRIDE        shift and go to state 15

    effect_statement               shift and go to state 20

state 28

    (23) value -> ID .
    (26) value -> ID . COLON ID

    RBRACE          reduce using rule 23 (value -> ID .)
    ID              reduce using rule 23 (value -> ID .)
    OVERRIDE        reduce using rule 23 (value -> ID .)
    COLON           shift and go to state 40


state 29

    (12) effect_statement -> ID EQUALS LBRACE . variant_content RBRACE
    (16) variant_content -> . variant_item
    (17) variant_content -> . variant_content variant_item
    (18) variant_content -> . OVERRIDE DOT ID LPAREN STRING RPAREN
    (19) variant_content -> . variant_content OVERRIDE DOT ID LPAREN STRING RPAREN
    (20) variant_item -> . ID EQUALS value
    (21) variant_item -> . ID EQUALS LBRACE block_content RBRACE
    (22) variant_item -> . ID EQUALS yes_no

    OVERRIDE        shift and go to state 44
    ID              shift and go to state 41

    variant_content                shift and go to state 42
    variant_item                   shift and go to state 43

state 30

    (14) effect_statement -> ID EQUALS value .

    RBRACE          reduce using rule 14 (effect_statement -> ID EQUALS value .)
    ID              reduce using rule 14 (effect_statement -> ID EQUALS value .)
    OVERRIDE        reduce using rule 14 (effect_statement -> ID EQUALS value .)


state 31

    (24) value -> NUMBER .

    RBRACE          reduce using rule 24 (value -> NUMBER .)
    ID              reduce using rule 24 (value -> NUMBER .)
    OVERRIDE        reduce using rule 24 (value -> NUMBER .)


state 32

    (25) value -> STRING .

    RBRACE          reduce using rule 25 (value -> STRING .)
    ID              reduce using rule 25 (value -> STRING .)
    OVERRIDE        reduce using rule 25 (value -> STRING .)


state 33

    (2) effect_file -> ID EQUALS LBRACE country_tag effect_content RBRACE .

    ID              reduce using rule 2 (effect_file -> ID EQUALS LBRACE country_tag effect_content RBRACE .)
    $end            reduce using rule 2 (effect_file -> ID EQUALS LBRACE country_tag effect_content RBRACE .)


state 34

    (3) effect_file -> ID EQUALS LBRACE countries_tag effect_content RBRACE .

    ID              reduce using rule 3 (effect_file -> ID EQUALS LBRACE countries_tag effect_content RBRACE .)
    $end            reduce using rule 3 (effect_file -> ID EQUALS LBRACE countries_tag effect_content RBRACE .)


state 35

    (6) country_tag -> COUNTRY EQUALS STRING .

    ID              reduce using rule 6 (country_tag -> COUNTRY EQUALS STRING .)
    OVERRIDE        reduce using rule 6 (country_tag -> COUNTRY EQUALS STRING .)


state 36

    (7) countries_tag -> COUNTRIES EQUALS LBRACKET . country_list RBRACKET
    (8) country_list -> . ID
    (9) country_list -> . country_list COMMA ID

    ID              shift and go to state 46

    country_list                   shift and go to state 45

state 37

    (13) effect_statement -> OVERRIDE DOT ID . LPAREN STRING RPAREN EQUALS LBRACE variant_content RBRACE
    (15) effect_statement -> OVERRIDE DOT ID . LPAREN STRING RPAREN

    LPAREN          shift and go to state 47


state 38

    (4) effect_file -> effect_file ID EQUALS LBRACE country_tag effect_content RBRACE .

    ID              reduce using rule 4 (effect_file -> effect_file ID EQUALS LBRACE country_tag effect_content RBRACE .)
    $end            reduce using rule 4 (effect_file -> effect_file ID EQUALS LBRACE country_tag effect_content RBRACE .)


state 39

    (5) effect_file -> effect_file ID EQUALS LBRACE countries_tag effect_content RBRACE .

    ID              reduce using rule 5 (effect_file -> effect_file ID EQUALS LBRACE countries_tag effect_content RBRACE .)
    $end            reduce using rule 5 (effect_file -> effect_file ID EQUALS LBRACE countries_tag effect_content RBRACE .)


state 40

    (26) value -> ID COLON . ID

    ID              shift and go to state 48


state 41

    (20) variant_item -> ID . EQUALS value
    (21) variant_item -> ID . EQUALS LBRACE block_content RBRACE
    (22) variant_item -> ID . EQUALS yes_no

    EQUALS          shift and go to state 49


state 42

    (12) effect_statement -> ID EQUALS LBRACE variant_content . RBRACE
    (17) variant_content -> variant_content . variant_item
    (19) variant_content -> variant_content . OVERRIDE DOT ID LPAREN STRING RPAREN
    (20) variant_item -> . ID EQUALS value
    (21) variant_item -> . ID EQUALS LBRACE block_content RBRACE
    (22) variant_item -> . ID EQUALS yes_no

    RBRACE          shift and go to state 50
    OVERRIDE        shift and go to state 52
    ID              shift and go to state 41

    variant_item                   shift and go to state 51

state 43

    (16) variant_content -> variant_item .

    RBRACE          reduce using rule 16 (variant_content -> variant_item .)
    OVERRIDE        reduce using rule 16 (variant_content -> variant_item .)
    ID              reduce using rule 16 (variant_content -> variant_item .)


state 44

    (18) variant_content -> OVERRIDE . DOT ID LPAREN STRING RPAREN

    DOT             shift and go to state 53


state 45

    (7) countries_tag -> COUNTRIES EQUALS LBRACKET country_list . RBRACKET
    (9) country_list -> country_list . COMMA ID

    RBRACKET        shift and go to state 54
    COMMA           shift and go to state 55


state 46

    (8) country_list -> ID .

    RBRACKET        reduce using rule 8 (country_list -> ID .)
    COMMA           reduce using rule 8 (country_list -> ID .)


state 47

    (13) effect_statement -> OVERRIDE DOT ID LPAREN . STRING RPAREN EQUALS LBRACE variant_content RBRACE
    (15) effect_statement -> OVERRIDE DOT ID LPAREN . STRING RPAREN

    STRING          shift and go to state 56


state 48

    (26) value -> ID COLON ID .

    RBRACE          reduce using rule 26 (value -> ID COLON ID .)
    ID              reduce using rule 26 (value -> ID COLON ID .)
    OVERRIDE        reduce using rule 26 (value -> ID COLON ID .)


state 49

    (20) variant_item -> ID EQUALS . value
    (21) variant_item -> ID EQUALS . LBRACE block_content RBRACE
    (22) variant_item -> ID EQUALS . yes_no
    (23) value -> . ID
    (24) value -> . NUMBER
    (25) value -> . STRING
    (26) value -> . ID COLON ID
    (31) yes_no -> . YES
    (32) yes_no -> . NO

    LBRACE          shift and go to state 58
    ID              shift and go to state 28
    NUMBER          shift and go to state 31
    STRING          shift and go to state 32
    YES             shift and go to state 60
    NO              shift and go to state 61

    value                          shift and go to state 57
    yes_no                         shift and go to state 59

state 50

    (12) effect_statement -> ID EQUALS LBRACE variant_content RBRACE .

    RBRACE          reduce using rule 12 (effect_statement -> ID EQUALS LBRACE variant_content RBRACE .)
    ID              reduce using rule 12 (effect_statement -> ID EQUALS LBRACE variant_content RBRACE .)
    OVERRIDE        reduce using rule 12 (effect_statement -> ID EQUALS LBRACE variant_content RBRACE .)


state 51

    (17) variant_content -> variant_content variant_item .

    RBRACE          reduce using rule 17 (variant_content -> variant_content variant_item .)
    OVERRIDE        reduce using rule 17 (variant_content -> variant_content variant_item .)
    ID              reduce using rule 17 (variant_content -> variant_content variant_item .)


state 52

    (19) variant_content -> variant_content OVERRIDE . DOT ID LPAREN STRING RPAREN

    DOT             shift and go to state 62


state 53

    (18) variant_content -> OVERRIDE DOT . ID LPAREN STRING RPAREN

    ID              shift and go to state 63


state 54

    (7) countries_tag -> COUNTRIES EQUALS LBRACKET country_list RBRACKET .

    ID              reduce using rule 7 (countries_tag -> COUNTRIES EQUALS LBRACKET country_list RBRACKET .)
    OVERRIDE        reduce using rule 7 (countries_tag -> COUNTRIES EQUALS LBRACKET country_list RBRACKET .)


state 55

    (9) country_list -> country_list COMMA . ID

    ID              shift and go to state 64


state 56

    (13) effect_statement -> OVERRIDE DOT ID LPAREN STRING . RPAREN EQUALS LBRACE variant_content RBRACE
    (15) effect_statement -> OVERRIDE DOT ID LPAREN STRING . RPAREN

    RPAREN          shift and go to state 65


state 57

    (20) variant_item -> ID EQUALS value .

    RBRACE          reduce using rule 20 (variant_item -> ID EQUALS value .)
    OVERRIDE        reduce using rule 20 (variant_item -> ID EQUALS value .)
    ID              reduce using rule 20 (variant_item -> ID EQUALS value .)


state 58

    (21) variant_item -> ID EQUALS LBRACE . block_content RBRACE
    (27) block_content -> . block_item
    (28) block_content -> . block_content block_item
    (29) block_item -> . ID EQUALS value
    (30) block_item -> . ID EQUALS LBRACE block_content RBRACE

    ID              shift and go to state 66

    block_content                  shift and go to state 67
    block_item                     shift and go to state 68

state 59

    (22) variant_item -> ID EQUALS yes_no .

    RBRACE          reduce using rule 22 (variant_item -> ID EQUALS yes_no .)
    OVERRIDE        reduce using rule 22 (variant_item -> ID EQUALS yes_no .)
    ID              reduce using rule 22 (variant_item -> ID EQUALS yes_no .)


state 60

    (31) yes_no -> YES .

    RBRACE          reduce using rule 31 (yes_no -> YES .)
    OVERRIDE        reduce using rule 31 (yes_no -> YES .)
    ID              reduce using rule 31 (yes_no -> YES .)


state 61

    (32) yes_no -> NO .

    RBRACE          reduce using rule 32 (yes_no -> NO .)
    OVERRIDE        reduce using rule 32 (yes_no -> NO .)
    ID              reduce using rule 32 (yes_no -> NO .)


state 62

    (19) variant_content -> variant_content OVERRIDE DOT . ID LPAREN STRING RPAREN

    ID              shift and go to state 69


state 63

    (18) variant_content -> OVERRIDE DOT ID . LPAREN STRING RPAREN

    LPAREN          shift and go to state 70


state 64

    (9) country_list -> country_list COMMA ID .

    RBRACKET        reduce using rule 9 (country_list -> country_list COMMA ID .)
    COMMA           reduce using rule 9 (country_list -> country_list COMMA ID .)


state 65

    (13) effect_statement -> OVERRIDE DOT ID LPAREN STRING RPAREN . EQUALS LBRACE variant_content RBRACE
    (15) effect_statement -> OVERRIDE DOT ID LPAREN STRING RPAREN .

    EQUALS          shift and go to state 71
    RBRACE          reduce using rule 15 (effect_statement -> OVERRIDE DOT ID LPAREN STRING RPAREN .)
    ID              reduce using rule 15 (effect_statement -> OVERRIDE DOT ID LPAREN STRING RPAREN .)
    OVERRIDE        reduce using rule 15 (effect_statement -> OVERRIDE DOT ID LPAREN STRING RPAREN .)


state 66

    (29) block_item -> ID . EQUALS value
    (30) block_item -> ID . EQUALS LBRACE block_content RBRACE

    EQUALS          shift and go to state 72


state 67

    (21) variant_item -> ID EQUALS LBRACE block_content . RBRACE
    (28) block_content -> block_content . block_item
    (29) block_item -> . ID EQUALS value
    (30) block_item -> . ID EQUALS LBRACE block_content RBRACE

    RBRACE          shift and go to state 73
    ID              shift and go to state 66

    block_item                     shift and go to state 74

state 68

    (27) block_content -> block_item .

    RBRACE          reduce using rule 27 (block_content -> block_item .)
    ID              reduce using rule 27 (block_content -> block_item .)


state 69

    (19) variant_content -> variant_content OVERRIDE DOT ID . LPAREN STRING RPAREN

    LPAREN          shift and go to state 75


state 70

    (18) variant_content -> OVERRIDE DOT ID LPAREN . STRING RPAREN

    STRING          shift and go to state 76


state 71

    (13) effect_statement -> OVERRIDE DOT ID LPAREN STRING RPAREN EQUALS . LBRACE variant_content RBRACE

    LBRACE          shift and go to state 77


state 72

    (29) block_item -> ID EQUALS . value
    (30) block_item -> ID EQUALS . LBRACE block_content RBRACE
    (23) value -> . ID
    (24) value -> . NUMBER
    (25) value -> . STRING
    (26) value -> . ID COLON ID

    LBRACE          shift and go to state 79
    ID              shift and go to state 28
    NUMBER          shift and go to state 31
    STRING          shift and go to state 32

    value                          shift and go to state 78

state 73

    (21) variant_item -> ID EQUALS LBRACE block_content RBRACE .

    RBRACE          reduce using rule 21 (variant_item -> ID EQUALS LBRACE block_content RBRACE .)
    OVERRIDE        reduce using rule 21 (variant_item -> ID EQUALS LBRACE block_content RBRACE .)
    ID              reduce using rule 21 (variant_item -> ID EQUALS LBRACE block_content RBRACE .)


state 74

    (28) block_content -> block_content block_item .

    RBRACE          reduce using rule 28 (block_content -> block_content block_item .)
    ID              reduce using rule 28 (block_content -> block_content block_item .)


state 75

    (19) variant_content -> variant_content OVERRIDE DOT ID LPAREN . STRING RPAREN

    STRING          shift and go to state 80


state 76

    (18) variant_content -> OVERRIDE DOT ID LPAREN STRING . RPAREN

    RPAREN          shift and go to state 81


state 77

    (13) effect_statement -> OVERRIDE DOT ID LPAREN STRING RPAREN EQUALS LBRACE . variant_content RBRACE
    (16) variant_content -> . variant_item
    (17) variant_content -> . variant_content variant_item
    (18) variant_content -> . OVERRIDE DOT ID LPAREN STRING RPAREN
    (19) variant_content -> . variant_content OVERRIDE DOT ID LPAREN STRING RPAREN
    (20) variant_item -> . ID EQUALS value
    (21) variant_item -> . ID EQUALS LBRACE block_content RBRACE
    (22) variant_item -> . ID EQUALS yes_no

    OVERRIDE        shift and go to state 44
    ID              shift and go to state 41

    variant_content                shift and go to state 82
    variant_item                   shift and go to state 43

state 78

    (29) block_item -> ID EQUALS value .

    RBRACE          reduce using rule 29 (block_item -> ID EQUALS value .)
    ID              reduce using rule 29 (block_item -> ID EQUALS value .)


state 79

    (30) block_item -> ID EQUALS LBRACE . block_content RBRACE
    (27) block_content -> . block_item
    (28) block_content -> . block_content block_item
    (29) block_item -> . ID EQUALS value
    (30) block_item -> . ID EQUALS LBRACE block_content RBRACE

    ID              shift and go to state 66

    block_content                  shift and go to state 83
    block_item                     shift and go to state 68

state 80

    (19) variant_content -> variant_content OVERRIDE DOT ID LPAREN STRING . RPAREN

    RPAREN          shift and go to state 84


state 81

    (18) variant_content -> OVERRIDE DOT ID LPAREN STRING RPAREN .

    RBRACE          reduce using rule 18 (variant_content -> OVERRIDE DOT ID LPAREN STRING RPAREN .)
    OVERRIDE        reduce using rule 18 (variant_content -> OVERRIDE DOT ID LPAREN STRING RPAREN .)
    ID              reduce using rule 18 (variant_content -> OVERRIDE DOT ID LPAREN STRING RPAREN .)


state 82

    (13) effect_statement -> OVERRIDE DOT ID LPAREN STRING RPAREN EQUALS LBRACE variant_content . RBRACE
    (17) variant_content -> variant_content . variant_item
    (19) variant_content -> variant_content . OVERRIDE DOT ID LPAREN STRING RPAREN
    (20) variant_item -> . ID EQUALS value
    (21) variant_item -> . ID EQUALS LBRACE block_content RBRACE
    (22) variant_item -> . ID EQUALS yes_no

    RBRACE          shift and go to state 85
    OVERRIDE        shift and go to state 52
    ID              shift and go to state 41

    variant_item                   shift and go to state 51

state 83

    (30) block_item -> ID EQUALS LBRACE block_content . RBRACE
    (28) block_content -> block_content . block_item
    (29) block_item -> . ID EQUALS value
    (30) block_item -> . ID EQUALS LBRACE block_content RBRACE

    RBRACE          shift and go to state 86
    ID              shift and go to state 66

    block_item                     shift and go to state 74

state 84

    (19) variant_content -> variant_content OVERRIDE DOT ID LPAREN STRING RPAREN .

    RBRACE          reduce using rule 19 (variant_content -> variant_content OVERRIDE DOT ID LPAREN STRING RPAREN .)
    OVERRIDE        reduce using rule 19 (variant_content -> variant_content OVERRIDE DOT ID LPAREN STRING RPAREN .)
    ID              reduce using rule 19 (variant_content -> variant_content OVERRIDE DOT ID LPAREN STRING RPAREN .)


state 85

    (13) effect_statement -> OVERRIDE DOT ID LPAREN STRING RPAREN EQUALS LBRACE variant_content RBRACE .

    RBRACE          reduce using rule 13 (effect_statement -> OVERRIDE DOT ID LPAREN STRING RPAREN EQUALS LBRACE variant_content RBRACE .)
    ID              reduce using rule 13 (effect_statement -> OVERRIDE DOT ID LPAREN STRING RPAREN EQUALS LBRACE variant_content RBRACE .)
    OVERRIDE        reduce using rule 13 (effect_statement -> OVERRIDE DOT ID LPAREN STRING RPAREN EQUALS LBRACE variant_content RBRACE .)


state 86

    (30) block_item -> ID EQUALS LBRACE block_content RBRACE .

    RBRACE          reduce using rule 30 (block_item -> ID EQUALS LBRACE block_content RBRACE .)
    ID              reduce using rule 30 (block_item -> ID EQUALS LBRACE block_content RBRACE .)

